; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/pf/ftp-proxy/extr_filter.c_server_lookup.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/pf/ftp-proxy/extr_filter.c_server_lookup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr = type { i64 }

@AF_INET = common dso_local global i64 0, align 8
@AF_INET6 = common dso_local global i64 0, align 8
@EPROTONOSUPPORT = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @server_lookup(%struct.sockaddr* %0, %struct.sockaddr* %1, %struct.sockaddr* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.sockaddr*, align 8
  %6 = alloca %struct.sockaddr*, align 8
  %7 = alloca %struct.sockaddr*, align 8
  store %struct.sockaddr* %0, %struct.sockaddr** %5, align 8
  store %struct.sockaddr* %1, %struct.sockaddr** %6, align 8
  store %struct.sockaddr* %2, %struct.sockaddr** %7, align 8
  %8 = load %struct.sockaddr*, %struct.sockaddr** %5, align 8
  %9 = getelementptr inbounds %struct.sockaddr, %struct.sockaddr* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @AF_INET, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %21

13:                                               ; preds = %3
  %14 = load %struct.sockaddr*, %struct.sockaddr** %5, align 8
  %15 = call i32 @satosin(%struct.sockaddr* %14)
  %16 = load %struct.sockaddr*, %struct.sockaddr** %6, align 8
  %17 = call i32 @satosin(%struct.sockaddr* %16)
  %18 = load %struct.sockaddr*, %struct.sockaddr** %7, align 8
  %19 = call i32 @satosin(%struct.sockaddr* %18)
  %20 = call i32 @server_lookup4(i32 %15, i32 %17, i32 %19)
  store i32 %20, i32* %4, align 4
  br label %37

21:                                               ; preds = %3
  %22 = load %struct.sockaddr*, %struct.sockaddr** %5, align 8
  %23 = getelementptr inbounds %struct.sockaddr, %struct.sockaddr* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = load i64, i64* @AF_INET6, align 8
  %26 = icmp eq i64 %24, %25
  br i1 %26, label %27, label %35

27:                                               ; preds = %21
  %28 = load %struct.sockaddr*, %struct.sockaddr** %5, align 8
  %29 = call i32 @satosin6(%struct.sockaddr* %28)
  %30 = load %struct.sockaddr*, %struct.sockaddr** %6, align 8
  %31 = call i32 @satosin6(%struct.sockaddr* %30)
  %32 = load %struct.sockaddr*, %struct.sockaddr** %7, align 8
  %33 = call i32 @satosin6(%struct.sockaddr* %32)
  %34 = call i32 @server_lookup6(i32 %29, i32 %31, i32 %33)
  store i32 %34, i32* %4, align 4
  br label %37

35:                                               ; preds = %21
  %36 = load i32, i32* @EPROTONOSUPPORT, align 4
  store i32 %36, i32* @errno, align 4
  store i32 -1, i32* %4, align 4
  br label %37

37:                                               ; preds = %35, %27, %13
  %38 = load i32, i32* %4, align 4
  ret i32 %38
}

declare dso_local i32 @server_lookup4(i32, i32, i32) #1

declare dso_local i32 @satosin(%struct.sockaddr*) #1

declare dso_local i32 @server_lookup6(i32, i32, i32) #1

declare dso_local i32 @satosin6(%struct.sockaddr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
